# Matrix_ODE_FLInverse

./: .clang-format  .gitignore  CMakeLists.txt  FindLAPACKE.cmake  cmakecommand.sh
src/: BlockPreconditioner.h  CMakeLists.txt  Timer_Class.h  basesolverclass.h  filter_base.h  filter_header.h  freq_setup.h  matrix_read.cpp  matrix_read.h  matrix_replacement.h  postprocess.h  postprocessfunctions.h  spectra_central.h  spectra_eval.h  test.cpp  testRK.cpp  testeigsolve.cpp
work/: Matrix_ODE_FLInverse.code-workspace  blocktime.py  build_coupling  drawspec  frequency.py  fspectra.fullcouple.r1.out.q4  fspectra.fullcouple.r2.out.q4  fspectra.fullcouple.r3.out.q4  fspectra.r1.out.q1  fspectra.r1.out.q4  fspectra.r1.out.q8  fspectra.r2.out.q1  fspectra.r2.out.q4  fspectra.r2.out.q8  fspectra.r3.out.q1  fspectra.r3.out.q4  fspectra.r3.out.q8  logs  modes.in  modes.in.freq  run_RK  run_both  run_cpp  run_dspec  run_eigtest  run_full  run_test  spectra_comp.py  spectra_plot.py  spectra_subplot.py  test_parallelisation  time_complexity.py
